# UNIR2D

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
cmake/: Macros.cmake
include/UNIR2D/: Audio.hpp  Graficos.hpp  Input.hpp  Matematicas.hpp  Sistema.hpp
include/UNIR2D/Audio/: Sonido.cpp  Sonido.hpp
include/UNIR2D/Graficos/: Baldosas.hpp  Circulo.hpp  Color.hpp  Dibujable.cpp  Dibujable.hpp  Efecto.hpp  Fuentes.cpp  Fuentes.hpp  Imagen.hpp  Malla.cpp  Malla.hpp  Rectangulo.cpp  Rectangulo.hpp  Texto.cpp  Texto.hpp  Textura.cpp  Textura.hpp  Trazos.cpp  Trazos.hpp
include/UNIR2D/Input/: Raton.hpp  Teclado.hpp
include/UNIR2D/Matematicas/: Coord.hpp  Region.hpp  Tiempo.hpp  Transforma.hpp  TrazoLinea.hpp  TrianguloMalla.hpp  Vector.hpp
include/UNIR2D/Sistema/: ActorBase.cpp  ActorBase.hpp  JuegoBase.hpp  Motor.cpp  Motor.hpp  Rendidor.cpp  Rendidor.hpp
src/UNIR2D/: CMakeLists.txt
src/UNIR2D/Audio/: CMakeLists.txt
src/UNIR2D/Graficos/: Baldosas.cpp  CMakeLists.txt  Circulo.cpp  Color.cpp  Efecto.cpp  Fuentes.cpp  Imagen.cpp  Texto.cpp  Textura.cpp
src/UNIR2D/Input/: CMakeLists.txt  Raton.cpp  Teclado.cpp
src/UNIR2D/Matematicas/: CMakeLists.txt  Transforma.cpp
src/UNIR2D/Sistema/: ActorBase.cpp  CMakeLists.txt  JuegoBase.cpp
