cmake_minimum_required(VERSION 3.24)
project(UNIR2D VERSION 0.1.0)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

add_subdirectory(src/UNIR2D)

file(GLOB UNIR2D_HEADERS RELATIVE ${PROJECT_SOURCE_DIR} "include/UNIR2D/*")
set(UNIR2D_SOURCES ${UNIR2D_HEADERS})

add_library(UNIR2D ${UNIR2D_SOURCES})
target_compile_features(UNIR2D PUBLIC cxx_std_17)

set(CMAKE_C++_CREATE_STATIC_LIBRARY ON)
set_target_properties(UNIR2D PROPERTIES LINKER_LANGUAGE C++)

set(CPACK_PACKAGE_NAME_SUMMARY "UNIR2D")
set(CPACK_PACKAGE_VENDOR "International University of La Rioja")
set(CPACK_PACKAGE_FILE_NAME "UNIR2D-${PROJECT_VERSION}-${CMAKE_CXX_COMPILER_ID}-${CMAKE_CXX_COMPILER_VERSION}-${CMAKE_BUILD_TYPE}")
set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/readme.md")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/license.md")
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "UNIR2D ${PROJECT_VERSION}")
set(CPACK_MONOLITHIC_INSTALL ON)

include(CPack)

